AI Service Page added
+ Services page
+ChatGPT API Service
+AI Response Display
+utils

--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_ZG9taW5hbnQtZm9hbC00Mi5jbGVyay5hY2NvdW50cy5kZXYk
-CLERK_SECRET_KEY=sk_test_nfkrMifzqfaO3iSQDdU7wf9iyRMs8B0DUcWsRtR2K6
+; ENV VARIABLES
