--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "dompurify": "^3.1.2",
     "env-cmd": "^10.1.0",
     "install": "^0.13.0",
+    "jotai": "^2.12.2",
+    "lucide-react": "^0.487.0",
     "marked": "^12.0.2",
     "mongodb": "^6.6.1",
     "mongoose": "^8.3.4",
