Implemented Soulbound NFT minting

--- a/env/.env.example
+++ b/env/.env.example
@@ -13,3 +13,7 @@ MONGODB_URI=mongodb-connection-string
 
 # OpenAI
 CHAT_GPT_SECRET=chat-gpt-secret
+
+# Pinata
+PINATA_JWT=pinata-jwt
+PINATA_GATEWAY=pinata-gateway
