--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.0.6",
+    "@coral-xyz/anchor": "^0.29.0",
     "@google/generative-ai": "^0.24.0",
     "@hookform/error-message": "^2.0.1",
     "@next/env": "^15.2.4",
+    "@solana/spl-token": "^0.4.13",
+    "@solana/wallet-adapter-base": "^0.9.24",
+    "@solana/wallet-adapter-react": "^0.15.36",
+    "@solana/wallet-adapter-react-ui": "^0.9.36",
+    "@solana/wallet-adapter-wallets": "^0.19.33",
+    "@solana/web3.js": "^1.98.0",
     "@types/uuid": "^10.0.0",
     "axios": "^1.6.8",
     "dompurify": "^3.1.2",
@@ -26,6 +33,7 @@
     "next": "14.2.3",
     "npm": "^10.7.0",
     "openai": "^4.40.2",
+    "pinata": "^2.2.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
