--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "^1.6.8",
     "dompurify": "^3.1.2",
     "env-cmd": "^10.1.0",
+    "html2pptxgenjs": "^0.0.3",
     "install": "^0.13.0",
     "jotai": "^2.12.2",
     "lucide-react": "^0.487.0",
@@ -34,6 +35,7 @@
     "npm": "^10.7.0",
     "openai": "^4.40.2",
     "pinata": "^2.2.0",
+    "pptxgenjs": "^3.12.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
@@ -45,6 +47,7 @@
     "uuid": "^11.1.0"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.16",
     "@types/dompurify": "^3.0.5",
     "@types/node": "^20",
     "@types/react": "^18",
