added changes for production build

--- a/env/.env.example
+++ b/env/.env.example
@@ -17,3 +17,7 @@ CHAT_GPT_SECRET=chat-gpt-secret
 # Pinata
 PINATA_JWT=pinata-jwt
 PINATA_GATEWAY=pinata-gateway
+
+# DeepAI
+DEEPAI_API_KEY=123-code
+DEEPAI_API_URL=https://api.deepai.org/api/text2img
